alteração no home

--- a/home.html
+++ b/home.html
@@ -85,7 +85,7 @@
 
         <footer>
             <img id="instagram" src="img/Instagram.png">
-            <p id="fale">Fale conosco no instagram <a target="_blank">@e-commerce</a></p>
+            <p id="fale">Fale conosco no instagram <a href="#">@e-commerce</a></p>
         </footer>
 
 
